traefik/k8s/02-traefik-services.yml

# apiVersion: v1
# kind: Service
# metadata:
#   name: traefik-dashboard-service
#   namespace: traefik

# spec:
#   type: LoadBalancer
#   ports:
#     - port: 8080
#       targetPort: dashboard
#   selector:
#     app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: traefik
spec:
  type: LoadBalancer
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-websecure-service
  namespace: traefik
spec:
  type: LoadBalancer
  ports:
    - targetPort: websecure
      port: 443
  selector:
    app: traefik
